<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductsActivity"
    android:padding="20dp"
    android:background="@color/ic_app_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/list_products">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="25dp"
                android:gravity="center_horizontal"
                android:text="@string/lista_de_compras"
                android:textSize="25sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/text_add_product"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="20"
                    android:hint="@string/novo_producto"
                    android:inputType="text" />

                <ImageView
                    android:id="@+id/button_add_product"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:layout_weight="1"
                    android:background="@color/green"
                    android:clickable="true"
                    android:contentDescription="@string/button_add_product"
                    android:contextClickable="true"
                    android:focusable="true"
                    android:padding="1dp"
                    android:src="@drawable/ic_arrow_forward" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/text_remove_product"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="20"
                    android:hint="@string/remover_producto"
                    android:inputType="text" />

                <ImageView
                    android:id="@+id/button_remove_product"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:layout_weight="1"
                    android:background="@color/red"
                    android:clickable="true"
                    android:contentDescription="@string/button_remove_product"
                    android:focusable="true"
                    android:padding="1dp"
                    android:src="@drawable/ic_arrow_forward" />
            </LinearLayout>
        </LinearLayout>

        <ListView
            android:id="@+id/list_products"
            android:layout_width="376dp"
            android:layout_height="466dp"
            android:layout_gravity="bottom"
            android:layout_margin="10dp"
            android:foregroundTint="#000000"
            android:padding="20dp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/button_voltar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <Button
            android:id="@+id/button_voltar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:backgroundTint="@color/primary"
            android:text="@string/voltar"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="20dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>