<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:theme="@style/ThemeOverlay.TasksApp.FullscreenContainer"
    tools:context=".TasksActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/primary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal">

                <TextClock
                    android:id="@+id/time_hour_minute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:format12Hour="hh:mm"
                    android:format24Hour="hh:mm"
                    android:gravity="center"
                    android:keepScreenOn="true"
                    android:text="@string/base_time"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextClock
                    android:id="@+id/time_seconds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:format12Hour="ss"
                    android:format24Hour="ss"
                    android:gravity="center"
                    android:keepScreenOn="true"
                    android:text="@string/base_seconds"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/text_title_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="20"
                android:gravity="center"
                android:text="@string/lista_de_tarefas"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/status_battery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:layout_marginEnd="10dp"
                android:layout_weight="2"
                android:rotation="90"
                android:src="@drawable/status_battery_full" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="35dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <ListView
            android:id="@+id/list_tasks"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/menu_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_gravity="bottom"
        android:background="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <ImageView
            android:id="@+id/button_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="true"
            android:contentDescription="@string/button_add_product"
            android:contextClickable="true"
            android:focusable="true"
            android:src="@drawable/ic_open" />

        <LinearLayout
            android:id="@+id/frame_edits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/primary"
            android:orientation="vertical"
            android:padding="4dp"
            android:translationY="-10sp"
            android:visibility="gone"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/button_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/icon_de_fechar"
                android:src="@drawable/ic_close" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/text_add_task"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="20"
                    android:hint="@string/add_task"
                    android:inputType="text" />

                <ImageView
                    android:id="@+id/button_add_task"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:layout_weight="1"
                    android:background="@color/green"
                    android:clickable="true"
                    android:contentDescription="@string/button_add_task"
                    android:contextClickable="true"
                    android:focusable="true"
                    android:padding="1dp"
                    android:src="@drawable/ic_arrow_forward" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/text_remove_task"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="20"
                    android:hint="@string/remove_taks"
                    android:inputType="text" />

                <ImageView
                    android:id="@+id/button_remove_task"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:layout_weight="1"
                    android:background="@color/red"
                    android:clickable="true"
                    android:contentDescription="@string/button_remove_task"
                    android:focusable="true"
                    android:padding="1dp"
                    android:src="@drawable/ic_arrow_forward" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</androidx.cardview.widget.CardView>